
2017-01-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.h: removed CB_CS_PROCEDURE, alphabetical order for CB_CS_...
	* pplex.l, ppparse.y, cobc.h, parser.y, tree.c:
	  implemented CALL-CONVENTION directive
	* parser.y, tree.h: removed cb_entry_convention - stored as
	  call-convention now
	* parser.y, codegen.c: implemented entry-convention for entry points
	  including stdcall generation
	* reserved.c, parser.y: removed WINAPI

2017-01-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: work on SIZE IS for items passed BY VALUE

2017-01-22  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.h: added CB_CS_OPTIONS.
	* parser.y: added the OPTIONS paragraph, with DEFAULT ROUNDED MODE and
	  ENTRY-CONVENTION implemented.

2017-01-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	FR #194: generate a WinMain() function instead of main
	* flag.def: new cb_flag_winmain / -fwinmain for generating a WinMain()
	  function instead of main when compiling as executable
	* codegen.c (output_standard_includes): generate additional include
	  "windows.h" if cb_flag_winmain is active
	* codegen.c (output_main_function): generate WinMain instead of main
	  if cb_flag_winmain is active

2017-01-20  Brian Tiffin <btiffin@gnu.org>

	* tree.h: add PROCEDURE DIVISION entry convention types
	* cobc.h: add CB_CS_PROCEDURE context test value
	* parser.y: PROCEDURE DIVISION EXTERN support
	* reserved.c: EXTERN, COBOL, WINAPI context sensitive words
	* codegen.c: EXTERN program entry

2017-01-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: fixed output of error messages (result of previous change)
	  by adding and using (list_error_reverse)
	* parser.y: reactivate check PROCEDURE DIVISION returning item needs
	  to be in LINKAGE SECTION
	* codegen.c (output_internal_function): only allocate UDF RETURNING items
	  when in LINKAGE SECTION

2017-01-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
