@@ -1,4 +1,9 @@
 
+2017-01-30  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y, reserved.c, tree.h: allow EXTERN, STDCALL and STATIC to be
+	  disabled by mnemonics by removing (part of) their context flags.
+
 2017-01-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc.h: removed CB_CS_PROCEDURE, alphabetical order for CB_CS_...
